Update WordSegmenter.java
为解决JDK兼容问题